<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:id="@+id/labelBarData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BarData" />

        <TextView
            android:id="@+id/textBarData"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#000000"
            android:maxLines="10"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/labelBarType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BarType" />

        <TextView
            android:id="@+id/textBarType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/labelBarDigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BarDigit" />

        <TextView
            android:id="@+id/textBarDigit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/labelReadCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BarCount" />

        <TextView
            android:id="@+id/textReadCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:textColor="#ffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp">

            <Button
                android:id="@+id/buttonScan5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/buttonScan2"
                android:text="送信" />

            <Button
                android:id="@+id/buttonScan3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/buttonScan2"
                android:layout_toEndOf="@+id/switchEnableReader"
                android:text="DEL" />

            <Button
                android:id="@+id/buttonScan2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/switchEnableReader"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-49dp"
                android:text="@string/ButtonScan2" />

            <Switch
                android:id="@+id/switchEnableReader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonScan"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="49dp"
                android:text="@string/EnableReader" />

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/ButtonScan" />

        </RelativeLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
